# ML_SC2

./: .gitattributes  .gitignore  AUDIT_REMAINING_ITEMS.txt  LICENSE  README.md  README.txt  environment.yml  pyproject.toml  requirements.txt
artifacts/: mlp_torch_gpu_v3_1_accuracy_vs_duration.csv  mlp_torch_gpu_v3_1_export_summary.json  mlp_torch_gpu_v3_1_summary.json  model_comparison_summary_v1.csv  model_comparison_summary_v2.csv  raw_outputs_originali_chat.txt  rf_clean_v3_1_summary.json  rf_final_log_complete.txt  rf_test_clean_v3_1_summary.json  test1_xgb_vs_rf_bootstrap_samples.csv  test1_xgb_vs_rf_bootstrap_summary.json  test2_calibration_summary_xgb_vs_rf.json  test2_rf_calibration_bins.csv  test2_xgb_calibration_bins.csv  test3_duration_comparison_v3_1.csv  test3_duration_comparison_v3_1_summary.json  test4_mlp_calibration_bins.csv  test4_rf_calibration_bins.csv  xgb_clean_v3_1_fixed_summary.json  xgb_feature_importance_cleanv3_1_fixed.csv  xgboost_final_log_complete.txt
datasets/: starcraft_full_dataset_v3_1_fixed.csv
delivery/: README_delivery.md  RECONSTRUCTION_MAP.md  delivery_manifest.json
docs/: README_missing_scripts_bundle.txt  benchmarking_block10.md  benchmarking_block12.md  benchmarking_block14.md  benchmarking_block16.md  benchmarking_block9.md  data_provenance.md  dataset_schema.md  experiment_registry.md  final_cleanup_note.md  final_project_status.md  final_report_refined.md  github_metadata_todo.md  known_limitations.md  legacy_integration.md  methodology.md  repo_fix_plan_v2_0.md  repo_freeze_checklist.md
examples/: block14_commands.sh  (+3 more)
(+527 files in other folders)
